0.1.1
- AST parsing fixes: fixed TryExcept identifier parsing
- removed textmate tmbundle from contrib and into separate SVN location; windows users
cant handle those files, setuptools not very good at "pruning" certain directories
- fix so that "cache_timeout" parameter is propigated
- fix to expression filters so that string conversion (actually unicode) properly 
occurs before filtering

0.1.0

Initial release.